<resources>
    <string name="hello">Hello World, ProjectMenuAct!</string>
    <string name="app_name">ProjectMenuAct</string>
    <string name="hardware_equipment_check">1. Hardware device check</string>
    <string name="radio_frequency">2. Radio frequency related test</string>
    <string name="background_setting">3. Background setting</string>
    <string name="veneer_info_query">4. Veneer information query</string>
    <string name="network_setting">5. Network setting</string>
    <string name="recovery_factory_setting">6. Restore factory defaults</string>
    <string name="update_sdcard">7. Upgrade</string>
    <string name="check_flash">1. Flash check</string>
    <string name="check_batteries_parameter">2. Battery parameters check</string>
    <string name="lock_freq_test">1. Lock frequency point test</string>
    <string name="set_bluetooth_max_power">2. Set Bluetooth to maximum power</string>
    <string name="set_wifi_max_power">3. Set WiFi to maximum power</string>
    <string name="start_lock_freq">1. Start locking frequency</string>
    <string name="stop_lock_freq">2. Stop locking frequency</string>
    <string name="open_background_setting">1. Qualcomm background open setting</string>
    <string name="log_switch">2. Log setting</string>
    <string name="qcn_switch">3. OTP NV filter switch</string>
    <string name="usb_switch">4. Usb ports setting</string>
    <string name="usb_normal_mode">Normal mode</string>
    <string name="usb_Google_mode">Google mode</string>
    <string name="usb_CTSTest_mode">CTS test mode</string>
    <string name="usb_manufacture_mode">Manufacture mode</string>
    <string name="usb_authentication_mode">Authentication mode</string>
    <string name="usb_other_mode">Other mode</string>
    <string name="other_dialog_title">custom Usb port</string>
    <string name="other_tips">please input usb port number(0~255):</string>
    <string name="usb_settting_success">Succeeded, please restart handset to make it effect</string>
    <string name="usb_settting_failed">Failed</string>
    <string name="sys_lcd_switch">5. System sleep indicator switch</string>
    <string name="syssleep_indicator_dialog_title">System sleep indicator switch</string>
    <string name="syssleep_indicator_tips_success">Setting Success</string>
    <string name="syssleep_indicator_tips_failed">Setting Failed</string>
    <string name="dialog_open_background">Background open setting</string>
    <string name="log_switch_and_level_title">Log setting</string>
    <string name="log_switch_title">Log switch</string>
    <string name="log_level_title">Log level setting</string>
    <string name="qcn_switch_title">OTP NV filter switch</string>
    <string name="background_setting_title">Input password:</string>
    <string name="background_unlock_success">Qualcomm background unlock succeeded.</string>
    <string name="background_unlock_failed">Qualcomm background unlock failed.</string>
    <string name="background_lock_success">Qualcomm backgound lock succeeded.</string>
    <string name="background_lock_failed">Qualcomm background lock failed.</string>
    <string name="log_open_success">Opening log succeeded.</string>
    <string name="log_open_fail">Opening log failed.</string>
    <string name="log_close_success">Closing log succeeded.</string>
    <string name="log_close_fail">Closing log failed.</string>
    <string name="log_set_level_success">Log level set succeeded.</string>
    <string name="log_set_level_fail">Log level set failed.</string>
    <string name="qcn_open">OTP NV filter open</string>
    <string name="qcn_close">OTP NV filter close</string>
    <string name="sh_version_query">1. S/H version query</string>
    <string name="apparatus_type_query">2. Apparatus type query</string>
    <string name="manufacturer_info">3. Manufacturer information</string>
    <string name="other_query">4. Other query</string>
    <string name="apk_version_query">5. APK version query</string>
    <string name="apparatus_type_query_failed">Apparatus type query failed.</string>
    <string name="amms_version">1. AMSS version number:</string>
    <string name="amss_compile_time">2. AMSS compilation time:</string>
    <string name="oemsbl_version">3. OEMSBL version number:</string>
    <string name="efs_version">4. EFS version number:</string>
    <string name="hw_version">5. Hardware version number:</string>
    <string name="appsboot_version">6. APPSBOOT version number:</string>
    <string name="app_version">7. APP version number:</string>
    <string name="appfs_version">8. APPFS version number:</string>
    <string name="appfs_compile_time">9. APPFS compilation time:</string>
    <string name="touch_type">1. Touch screen type:</string>
    <string name="camera_type">2. Camera type:</string>
    <string name="nand_flash_type">3. NAND Flash type:</string>
    <string name="emmc_flash_type">3. EMMC Flash type:</string>
    <string name="hardware_veneer_number_query_failed">Hardware veneer number query failed.</string>
    <string name="outer_camera">External cameral type:</string>
    <string name="inner_camera">Internal cameral type:</string>
    <string name="isbn">ISBN:</string>
    <string name="pcb">PCB version:</string>
    <string name="dt">Software download (DT):</string>
    <string name="ct">Calibration test (CT):</string>
    <string name="wt">WT test (WT):</string>
    <string name="bt">Board test (BT):</string>
    <string name="mmit">MMI test (MMIT):</string>
    <string name="mt">Entire system test (MT):</string>
    <string name="pt">PT test (PT):</string>
    <string name="lt">LT:</string>
    <string name="mei_esn_number">1. IMEI/ESN number:</string>
    <string name="meid_number">1. MEID number:</string>
    <string name="sn_number">2. S/N number:</string>
    <string name="frequency_nv_info">3. Radio frequency NV backup:</string>
    <string name="branch_info">4.Branch information:</string>
    <string name="service_domain_setting">1. Service domain setting</string>
    <string name="sms_pri_setting">2. SMS priority setting</string>
    <string name="query_all_bind_plmn_id">3. Query all binding PLMN ID</string>
    <string name="sim_lock_state_query">4. SIM card lock state query</string>
    <string name="sim_lock_state_query_title">SIM card lock state query</string>
    <string name="sim_lock_state">SIM card lock state</string>
    <string name="qfuse_state_query">5. Qfuse state query</string>
    <string name="qfuse_state_query_title">Qfuse state query</string>
    <string name="qfuse_state">Qfuse state:</string>
    <string name="qfuse_write">Started</string>
    <string name="qfuse_not_write">Initial state</string>
    <string name="qfuse_error">Read state error</string>
    <string name="query_operator_and_country_info">6. Operator and country info</string>
    <string name="prop_file_not_exits">Property file not exists</string>
    <string name="info_file_not_exits">Info file not exists</string>
    <string name="info_file_not_readable">Info file not readable</string>
    <string name="mcc_not_set">"MCC not set
"</string>
    <string name="mnc_not_set">"MNC not set
"</string>
    <string name="query_failed">Query failed!</string>
    <string name="plmn">1. PLMN</string>
    <string name="plmn_ns">2. PLMN_NS</string>
    <string name="plmn_sp">3. PLMN_SP</string>
    <string name="title_plmn">PLMN</string>
    <string name="title_plmn_ns">PLMN_NS</string>
    <string name="title_plmn_sp">PLMN_SP</string>
    <string name="no_plmn">No binding PLMN ID.</string>
    <string name="clear_password">Clear password?</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="lock_screen_entry">Lock Frequency entry:</string>
    <string name="lock_screen_success">Lock Frequency succeeded</string>
    <string name="lock_cdma_freqency_success">Lock Frequency succeeded.Please reboot the phone.</string>
    <string name="lock_screen_fail">Lock Frequency failed</string>
    <string name="stop_lock_screen_success">Stop lock Frequency succeeded</string>
    <string name="stop_lock_cdma_freqency_success">Stop lock Frequency succeeded.Please reboot the phone.</string>
    <string name="stop_lock_screen_fail">Stop lock Frequency failed</string>
    <string name="lock_band_class">Lock CDMA1X band:</string>
    <string name="lock_cdma_freq">Lock CDMA1X freq:</string>
    <string name="lock_sid">Lock Sys ID:</string>
    <string name="lock_nid">Lock Net ID:</string>
    <string name="lock_evdo_band_class">Lock EVDO band:</string>
    <string name="lock_evdo_freq">Lock EVDO freq:</string>
    <string name="entry_null">No entry.</string>
    <string name="entry_unpermission">Invalid input.</string>
    <string name="recovery_system">Restore facotry defaults?</string>
    <string name="recovery_system_failed">Restore factory defaults failed.</string>
    <string name="set_service_domain">Set service domain.</string>
    <string name="set_service_domain_success">Set service domain succeeded.</string>
    <string name="set_service_domain_failed">Set service domain failed.</string>
    <string name="frequency_nv_info_backup">Radio frequency NV backed up.</string>
    <string name="frequency_nv_info_not_backup">Radio frequency NV not backed up.</string>
    <string name="read_sn_failed">Checking S/N failed.</string>
    <string name="read_nv_failed">Checking NV114 failed.</string>
    <string name="read_imei_failed">Checking IMEI failed.</string>
    <string name="update_sdcard_title">1. SD card upgrade</string>
    <string name="update_touchscreen">2. Touchscreen firmware upgrade</string>
    <string name="update_compass">3. Compass update</string>
    <string name="update_touchscreen_title">Touchscreen firmware upgrade</string>
    <string name="is_update_sdcard">Upgrade SD card?</string>
    <string name="update_sdcard_fail">Upgrade failed.</string>
    <string name="update_touchscreen_fail">Version too early. Upgrade failed.</string>
    <string name="update_touchscreen_success">Upgrade succeeded.</string>
    <string name="update_compass_success">Compass update succeeded.</string>
    <string name="update_compass_failed">Compass update failed.</string>
    <string name="lcd_type">4. LCD type:</string>
    <string name="board_id">5. board ID:</string>
    <string name="mem_type">6. Memory Type:</string>
    <string name="operator">Operator Name:</string>
    <string name="country">Country Name:</string>
    <string name="dualmic_switch">6. Dual Mic Setting</string>
    <string name="dualmic_title">Dual Mic Switch</string>
    <string name="dualmic_open_success">Opening Dual Mic Success</string>
    <string name="dualmic_close_success">Closing Dual Mic Success</string>
    <string name="dualmic_tips_failed">Setting Failed</string>
    <string name="dump_log_switch">. Dump &amp; Log</string>
    <string name="pref_title_open_dump">Open Dump &amp; Log</string>
    <string name="check_sdcard_exist">Please insert sdcard if you need this function</string>
    <string name="mf_manufacturer_info">ProjectMenuAct</string>
    <string name="mf_imei_number">.IMEI Number:</string>
    <string name="mf_software_version">.Build number:</string>
    <string name="mf_sv_name">U8800V100R001C17B131</string>
    <string name="mf_hw_version">.Hardware version number:</string>
    <string name="inner_sdcard">. SD card</string>
    <string name="sd_memory">SD card</string>
    <string name="sd_eject">Unmount SD card</string>
    <string name="sd_eject_summary">Unmount the SD card for safe removal</string>
    <string name="sd_format">Format SD card</string>
    <string name="sd_format_summary">Format (erase) the SD card</string>
    <string name="sd_ejecting_title">Unmounting</string>
    <string name="sd_ejecting_summary">Unmount in progress</string>
    <string name="sd_mount">Mount SD card</string>
    <string name="sd_mount_summary">Mount the SD card</string>
</resources>